      table name and an alias, returned no result. I changed the
      parser to add a list of "forbidden" reserved words, as listed
      in the MySQL manual (reserved words). Those are not allowed
      as a table/column name, but others (like Storage) are allowed.
      Now the query works. TODO: do not pretty print in color, 
      in this case

2005-04-25 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.
    * lang/english: Fix typo.

2005-04-24 Marc Delisle  <lem9@users.sourceforge.net>
    * left.php, queryframe.php: bug #1168784, please respect the db order
      given in only_db

2005-04-16 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/chinese_simplified: Updates, thanks to mysf at etang.com
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
    * lang/galician: Updates, thanks to Xosé Calvo.
    * new language: belarusian, thanks to Jaska Zedlik <jz53 at zedlik.com>
    * tbl_properties_export.php: bug #1180860, error going from Export
      to Insert tab
    ### 2.6.2 released

2005-04-14 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: Search icon centering

2005-04-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_alter.php: undefined $field_comments

2005-04-10 Alexander M. Turek  <me@derrabus.de>
    * lang/*.inc.php: New messages for MySQL 5.0 privileges.

2005-04-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/bulgarian:  Updated, thanks to Stanislav Yordanov (stanprog).
    * server_privileges.php: bug #1179969, problem editing a user's profile
      (and there was a problem also with the detection of
       an already existing user)

2005-04-09 Alexander M. Turek  <me@derrabus.de>
    * libraries/sqlparser.data.php: Added keyword ROUTINE.

2005-04-08 Marc Delisle  <lem9@users.sourceforge.net>